# rpc-proxy-framework

./: .gitignore  CMakeLists.txt  GEMINI.md  README.md  controller.py
.github/workflows/: build_and_test.yml  build_test_and_examples.yml  test_examples.yml
examples/cpp_controller/: CMakeLists.txt  cpp_controller_example.cpp
examples/java_controller/: pom.xml
examples/java_controller/src/main/java/com/example/: App.java
examples/java_controller/src/main/java/com/example/rpc/: RpcClient.java
examples/java_controller/src/main/java/com/kekxv/: App.java  MultiClientApp.java  Reproduction.java
examples/java_controller/src/main/java/com/kekxv/rpc/: RpcClient.java
examples/python_controller/: controller.py
libffi/x86-64bit-msvc-binaries/: libffi-8.exp
src/: callback_manager.cpp  callback_manager.h  executor.cpp  executor.h  ffi_dispatcher.cpp  ffi_dispatcher.h  ipc_server.cpp  ipc_server.h  lib_manager.cpp  lib_manager.h  main.cpp  struct_manager.cpp  struct_manager.h
test/: CMakeLists.txt  executor_test.cpp  multi_client_test.cpp
test_lib/: CMakeLists.txt  my_lib.c
utils/: base64.cpp  base64.h
